--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@
 }
 
 #bg{
-    background-image: radial-gradient(#058ed9, #393e41);
+    background-image: radial-gradient(var(--color02), var(--color01));
     display: flex;
     flex-direction: row;
     justify-content: center;
