--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@
 }
 
 #bg{
-    background-image: radial-gradient(var(--color02), var(--color01));
+    background-image: radial-gradient(rgba(230, 65, 0, 0.788), rgb(238, 107, 14));
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -27,7 +27,7 @@
 #loginBox{
     width: 25rem;
     height: 25rem;
-    background-color: rgba(68, 66, 66, 0.432);
+    background-color: rgba(255, 255, 255, 0.13);
     text-align: center;
 }
 
