--- a/css/main.css
+++ b/css/main.css
@@ -106,6 +106,7 @@ h1:hover{
     height: 100%;
     padding: 1.5rem 0;
     transition: .2s;
+    z-index: 10;
 }
 
 #sideBar a{
@@ -197,5 +198,14 @@ h1:hover{
    }
    header{
        text-align: left;
+   }
+   #carrinho{
+       display: none;
+   }
+   #menuCarrinho{
+        display: none;
+   }
+   #fecharCarrinho{
+        display: none;
    }
 }
