--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,11 @@ header{
     min-height: 5rem;
 }
 
+#logoIcon{
+    display: inline-block;
+    width: 100px;
+}
+
 lord-icon{margin-top: -.5rem ;}
 
 #userIcon{
@@ -212,18 +217,16 @@ lord-icon{margin-top: -.5rem ;}
 /*Conf Responsividade*/
 @media screen and (max-width: 650px) {
     #userIcon{
-        margin: auto 0rem auto auto;
+        margin: 0;
         text-align: center;
     }
     #nomeDoSite{
         display: none;
     }
     #logoIcon{
+        display: block;
         text-align: center;
-    }
-    lord-icon{
-        margin-top: -.4rem;
-        text-align: center;
+        margin: auto;
     }
     #dskMenu{
         display: none;
@@ -242,6 +245,7 @@ lord-icon{margin-top: -.5rem ;}
     display: block;
     min-width: 108px;
     overflow: hidden;
+    margin: auto;
    }
    #carrinho{
        display: none;
