--- a/css/style.css
+++ b/css/style.css
@@ -218,6 +218,7 @@ lord-icon{margin-top: -.5rem ;}
     width: 10rem;
     height: 10rem;
     text-align: center;
+    display: inline-block;
 }
 
 .imgProduto{
