--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ lord-icon{margin-top: -.5rem ;}
 #userIcon{
     float: left;
     font-size: 3rem;
-    margin: auto 1rem;
+    margin: .1em 1rem;
     color:rgba(70, 116, 214, 0.925);
     text-shadow: 0px 0px 5px rgb(43, 30, 216);
 }
@@ -219,15 +219,13 @@ lord-icon{margin-top: -.5rem ;}
 }
 
 .item{
-    width: 10rem;
-    height: 10rem;
     text-align: center;
-    margin: auto;
+    margin: 1rem auto auto auto;
     display: inline-block;
 }
 
 .imgProduto{
-    width: 10rem;
+    width: 8rem;
 }
 
 .item p{
@@ -237,7 +235,7 @@ lord-icon{margin-top: -.5rem ;}
 /*Conf Responsividade*/
 @media screen and (max-width: 650px) {
     #userIcon{
-        margin: 0;
+        margin: .5rem 0 0 0;
         text-align: center;
     }
     #nomeDoSite{
