--- a/css/main.css
+++ b/css/main.css
@@ -6,15 +6,6 @@
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-:root {
-    --color01: #483d3f;
-    --color02: #058ed9;
-    --color03: #f4ebd9;
-    --color04: #a39a92;
-    --color05: #77685d;
-    --color06: #393e41;
-}
-
 #bg {
     background-image: radial-gradient(rgba(230, 65, 0, 0.788), rgb(238, 107, 14));
     display: flex;
@@ -96,7 +87,7 @@ input[type="submit"]:hover {
 #given_name {
     display: none;
     position: fixed;
-    background-image: linear-gradient(-90deg, #2a62a3, #8CBFB4, #bed1a5);
+    background-image: linear-gradient(-90deg, #083DA6, #023373, #36DEF5);
     height: 100vh;
     top: 0;
     left: 0;
