--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,7 @@ lord-icon {
 #userIcon:hover {
     text-shadow: 0px 0px 10px rgb(43, 30, 216);
     transition: .3s;
+    cursor: pointer;
 }
 
 #given_name {
@@ -199,9 +200,12 @@ lord-icon {
     color: #000;
     text-decoration: none;
     margin: .5rem auto;
+    background: #4030e8;
+    z-index: 10;
 }
 
 #categorias a:hover {
+    background: #309ee8;
     text-decoration: underline #393e41;
 }
 
@@ -210,6 +214,7 @@ lord-icon {
     border-radius: 5px;
     padding: 4px 6px;
     transition: .3s;
+    z-index: 10;
 }
 
 #categorias:hover {
@@ -223,7 +228,7 @@ lord-icon {
 
 .item {
     text-align: center;
-    margin: 1rem auto auto auto;
+    margin: 1rem 1rem .5rem 1rem;
     display: inline-block;
 }
 
@@ -263,6 +268,10 @@ lord-icon {
         top: 1.3rem;
     }
 
+    #menu:hover{
+        cursor: pointer;
+    }
+
     header {
         text-align: left;
     }
@@ -284,5 +293,8 @@ lord-icon {
 
     #fecharCarrinho {
         display: none;
+    }
+    .item{
+        margin: 1rem .5rem .5rem .5rem;
     }
 }
