--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,10 @@
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+:root{
+    --color001: #393e41;
+}
+
 #bg {
     background-image: radial-gradient(rgba(230, 65, 0, 0.788), rgb(238, 107, 14));
     display: flex;
@@ -39,7 +43,7 @@ i {
     margin: .3rem auto;
     text-align: center;
     border: none;
-    background-color: var(--color06);
+    background-color: var(--color001);
     color: white;
 }
 
@@ -56,7 +60,7 @@ i {
 #googleLogin {
     text-align: center;
     margin: auto;
-    width: 235px;
+    width: 250px;
 }
 
 input[type="submit"] {
