--- a/css/style.css
+++ b/css/style.css
@@ -7,12 +7,18 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
+:root{
+    --color001: chocolate;
+    --color002: #4030e8;
+    --color003: #3080e8;
+}
+
 body {
     background: rgba(216, 216, 216, 0.767);
 }
 
 header {
-    background: chocolate;
+    background: var(--color001);
     text-align: center;
     margin: auto;
     padding: 1rem 0 .2rem 0;
@@ -32,12 +38,12 @@ lord-icon {
     float: left;
     font-size: 3rem;
     margin: .1em 1rem;
-    color: rgba(70, 116, 214, 0.925);
-    text-shadow: 0px 0px 5px rgb(43, 30, 216);
+    color: var(--color003);
+    text-shadow: 0px 0px 7px var(--color002);
 }
 
 #userIcon:hover {
-    text-shadow: 0px 0px 10px rgb(43, 30, 216);
+    text-shadow: 0px 0px 15px var(--color002);
     transition: .3s;
     cursor: pointer;
 }
@@ -230,6 +236,10 @@ lord-icon {
     text-align: center;
     margin: 1rem 1rem .5rem 1rem;
     display: inline-block;
+}
+
+.item:hover{
+    cursor: pointer;
 }
 
 .imgProduto {
