--- a/css/style.css
+++ b/css/style.css
@@ -125,12 +125,12 @@ lord-icon {
     width: 2.5rem;
     height: 4px;
     border-radius: 5px;
-    background: #3080e8;
+    background: var(--color003);
     margin: .45rem auto;
 }
 
 .hamburguer:hover {
-    background: #4030e8;
+    background: var(--color002);
 }
 
 #sideBar {
