--- a/css/comprando.css
+++ b/css/comprando.css
@@ -1,23 +1,23 @@
 @charset "UTF-8";
 
-*{
+* {
     margin: .2px;
     padding: .2px;
     font-family: Arial, Helvetica, sans-serif;
 }
 
 
-#voltar img{
+#voltar img {
     margin: 1.5rem 1rem;
     width: 3rem;
     height: 2.5rem;
 }
 
-#voltar:hover{
+#voltar:hover {
     cursor: pointer;
 }
 
-#menu{
+#menu {
     float: right;
     margin: 1.4rem 1rem;
 }
@@ -77,7 +77,7 @@
     cursor: pointer;
 }
 
-.imgProduto{
+.imgProduto {
     width: 15rem;
     height: 15rem;
     background-image: url("../media/basket.png");
@@ -85,25 +85,25 @@
     margin: auto;
 }
 
-.mostradorProdutos{
+.mostradorProdutos {
     margin: auto;
     background: #83838354;
     max-width: 800px;
 }
 
-.infoCompra{
+.infoCompra {
     text-align: center;
     margin: 1rem auto 2rem auto;
 }
 
-#preco{
+#preco {
     max-width: 800px;
     margin: 5rem auto -4rem auto;
     text-indent: 1rem;
     font-size: 1.5rem;
 }
 
-#favoritos{
+#favoritos {
     text-align: right;
     font-size: 1.5rem;
     max-width: 800px;
@@ -111,11 +111,11 @@
     cursor: pointer;
 }
 
-#favoritos i{
+#favoritos i {
     margin: 1rem;
 }
 
-#removerFavorito{
+#removerFavorito {
     text-align: right;
     cursor: pointer;
     margin: auto;
@@ -123,53 +123,53 @@
     max-width: 800px;
 }
 
-#removerFavorito p{
+#removerFavorito p {
     margin: auto 1.3rem;
 }
 
-#favInfo{
+#favInfo {
     font-size: normal;
     display: inline-block;
 }
 
-#removeFav{
+#removeFav {
     font-size: normal;
     display: inline-block;
 }
 
-#freteInfo{
+#freteInfo {
     color: #696969;
     text-indent: 1rem;
     margin: .5rem auto;
     max-width: 800px;
 }
 
-#produtosRestantes{
+#produtosRestantes {
     text-indent: 1rem;
     margin: 2.5rem auto auto auto;
     max-width: 800px;
 }
 
-#descricao{
+#descricao {
     max-width: 800px;
     margin: 3rem auto;
     padding: .7rem;
     text-align: justify;
 }
 
-#comprar{
+#comprar {
     text-align: center;
-}
-
-#comprar input{
     background-color: #3080e8;
-    border: none;
     width: 6rem;
-    height: 2rem;
+    height: 1rem;
+    padding: .5rem;
     margin: auto auto 1rem auto
 }
 
-#comprar input:hover{
+
+
+#comprar:hover {
     background: #4030e8;
     box-shadow: 0 0 50px #4030e8;
+    cursor: pointer;
 }
