--- a/css/comprando.css
+++ b/css/comprando.css
@@ -162,6 +162,9 @@
     padding: .5rem;
     max-width: 5.5rem;
     margin: auto auto 1rem auto;
+    background-color: #3080e8;
+    color: #fff;
+    font-weight: bold;
 }
 
 
