--- a/css/comprando.css
+++ b/css/comprando.css
@@ -186,7 +186,7 @@
 
 #fecharPrompt{
     margin: 1.5rem;
-    color: rgb(228, 36, 36);
+    color: #e42424;
     font-size: 1.5rem;
     font-weight: bolder;
     text-align: right;
@@ -194,18 +194,21 @@
 }
 
 #defQuantidade{
+    margin-top: 4rem;
     text-align: center;
 }
 
 #defQuantidade p{
     font-size: 1.3rem;
-    color: #fff;
+    color: #ffffff;
+    margin: 1rem;
 }
 
 #maisDeUmProduto:hover{
     text-decoration: underline;
     cursor: pointer;
     transition: .2s;
+    margin-top: 1rem;
 }
 
 input[type="range"]{
@@ -236,4 +239,19 @@ input[type="text"]{
     color: #333638;
     font-size: 1.5rem;
     margin: 1rem;
+}
+
+#btnFinalizarCompra{
+    margin: 3rem auto;
+    color: white;
+    font-size: 1.3rem;
+    background-color: chocolate;
+    width: 10rem;
+    padding: 4px 1rem;
+}
+
+#btnFinalizarCompra:hover{
+    color:#3080e8;
+    cursor: pointer;
+    transition: .2s;
 }
