--- a/css/comprando.css
+++ b/css/comprando.css
@@ -182,6 +182,8 @@
     position: relative;
     z-index: 10;
     overflow: hidden;
+    color: white;
+    font-size: 1.3rem;
 }
 
 #fecharPrompt{
@@ -194,13 +196,11 @@
 }
 
 #defQuantidade{
-    margin-top: 4rem;
+    margin-top: 3rem;
     text-align: center;
 }
 
 #defQuantidade p{
-    font-size: 1.3rem;
-    color: #ffffff;
     margin: 1rem;
 }
 
@@ -242,9 +242,7 @@ input[type="text"]{
 }
 
 #btnFinalizarCompra{
-    margin: 3rem auto;
-    color: white;
-    font-size: 1.3rem;
+    margin: 2rem auto;
     background-color: chocolate;
     width: 10rem;
     padding: 4px 1rem;
@@ -254,4 +252,39 @@ input[type="text"]{
     color:#3080e8;
     cursor: pointer;
     transition: .2s;
+}
+
+#corProdutos{margin: 2rem auto;}
+
+#colorBlue{
+    width: 2rem;
+    height: 2rem;
+    margin: -.5rem .3rem;
+    background-color: #3080e8;
+    display: inline-block;
+    cursor: pointer;
+}
+
+#colorRed{
+    width: 2rem;
+    height: 2rem;
+    margin: -.5rem .3rem;
+    background-color: #e83030;
+    display: inline-block;
+    cursor: pointer;
+}
+
+#colorYellow{
+    width: 2rem;
+    height: 2rem;
+    margin: -.5rem .3rem;
+    background-color: #e8dc30;
+    display: inline-block;
+    cursor: pointer;
+}
+
+p#info{
+    margin-top: 2rem;
+    color: #e2e0e0;
+    font-size: 1rem;
 }
