--- a/css/style.css
+++ b/css/style.css
@@ -328,7 +328,7 @@ lord-icon {
 
     #mostradorDeImagens{
         margin: 2rem auto;
-        width: 30rem;
+        width: 100%;
         height: 9rem;
         text-align: center;
     }
