--- a/css/login.css
+++ b/css/login.css
@@ -11,7 +11,7 @@
 }
 
 #bg {
-    background-image: radial-gradient(rgba(230, 65, 0, 0.788), rgb(238, 107, 14));
+    background-image: radial-gradient(#e64100c9, #ee6b0e);
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -32,29 +32,7 @@
 
 i {
     font-size: 3.5rem;
-    margin: 4rem auto 3rem auto;
-}
-
-.user {
-    display: block;
-    width: 14rem;
-    height: 1.9rem;
-    border-radius: 8px 0;
-    margin: .3rem auto;
-    text-align: center;
-    border: none;
-    background-color: var(--color001);
-    color: white;
-}
-
-.user:hover {
-    box-shadow: 1px 1px 2px 1px rgb(59, 55, 55);
-    transition: 2.s;
-}
-
-::placeholder {
-    text-align: center;
-    color: rgb(196, 189, 189);
+    margin: 2.5rem auto 3rem auto;
 }
 
 #googleLogin {
@@ -63,18 +41,45 @@ i {
     width: 250px;
 }
 
+#opcoesDeLogin{
+    color: #000;
+    margin: .3rem auto;
+}
+
+.userInformationsInput{
+    display: block;
+    width: 14rem;
+    height: 1.9rem;
+    border-radius: 8px;
+    margin: .3rem auto;
+    text-align: center;
+    border: none;
+    background-color: var(--color001);
+    color: white;
+}
+
+.userInformationsInput:hover {
+    box-shadow: 1px 1px 2px 1px rgb(59, 55, 55);
+    transition: 2.s;
+}
+
+::placeholder {
+    text-align: center;
+    color: #c4bdbd;
+}
+
 input[type="submit"] {
     border-radius: 3px;
-    padding: 2px 8px;
+    padding: 2px 10px;
     border: none;
-    margin: .5rem auto 2.7rem auto;
-    background-color: rgba(255, 255, 255, 0.39);
-    color: rgb(39, 36, 36);
+    margin: .5rem auto .5rem auto;
+    background-color: #393e41;
+    color: #c4bdbd;
 }
 
 input[type="submit"]:hover {
-    background-color: #393e41;
     color: #fff;
+    cursor: pointer;
     transition: .3s;
 }
 
@@ -105,6 +110,18 @@ input[type="submit"]:hover {
     color: #fff;
     background-size: 300% 300%;
     animation: bg 15s ease infinite;
+}
+
+/*Conf alert*/
+
+a{
+    color: #fff;
+    text-indent: .3rem;
+    text-decoration: none;
+}
+
+a:hover{
+    text-shadow: 0 0 1rem #fff;
 }
 
 @keyframes bg {
